# Collaboration

./: .gitignore  CMakeLists.txt  Car.h  CarRentalSystem.cpp  CarRentalSystem.h  Coen244CarRentingBusiness.cpp  Customer.cpp
Assignment 3/: CMakeLists.txt  CarRentalSystem.h  Question 2.docx  testCoen244CarRentingSystem.cpp
assingment 5/: .gitignore  CMakeLists.txt  Item.cpp  Item.h  SingleItem.h  main.cpp  output.txt  sample  test.txt
assingment 5/40052212_Etienne_40058053_Nathan/: Bakery_inventory.exe.lnk  README.txt
assingment 5/40052212_Etienne_40058053_Nathan/QT_Version/: moc_mainwindow.cpp  qrc_res.cpp
assingment 5/40052212_Etienne_40058053_Nathan/QT_Version/src_code/: mainwindow.cpp  table.ui
assingment 5/Debug Suite/40052212_Etienne_40058053_Nathan/: Bakery_inventory.exe - Shortcut.lnk  README.txt  sample.json
assingment 5/Debug Suite/40052212_Etienne_40058053_Nathan/QT_Version/: moc_table.cpp
assingment 5/Debug Suite/40052212_Etienne_40058053_Nathan/QT_Version/src_code/: Bakery_inventory.pro  SingleItem.cpp  mainwindow.h  mainwindow.ui  table.cpp  table.h
assingment 5/Debug Suite/40052212_Etienne_40058053_Nathan/cmd_line_version/: CMakeLists.txt  main.cpp
assingment 5/QT/Bakery_inventory/: Bakery_inventory.pro  mainwindow.cpp  mainwindow.h  output.txt  res.qrc  table.cpp  table.h  table.ui
assingment 5/QT/build-Bakery_inventory-Desktop_Qt_5_10_1_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
assingment 5/QT/build-Bakery_inventory-Desktop_Qt_5_10_1_MinGW_32bit-Debug/debug/: moc_mainwindow.cpp  qrc_res.cpp
(+37 files in other folders)
